# CrawJUD-Web

./: .gitignore  Dockerfile  SECURITY.md  compose.yml  export.xlsx  export2.xlsx  instcert.cpp  main.py  postma.json  pyproject.toml  requirements.txt  tst.py
.github/: pull_request_template.md
.github/workflows/: validate_pr.yml
Temp/: modelo_protocolo_PROJUDI.xlsx_2019.xlsx_acp.xlsx
app/: __init__.py  __main__.py  default_config.py
app/decorators/: __init__.py  checks.py
app/forms/: __init__.py  validators.py
app/forms/auth/: login.py
app/forms/bot/: __init__.py  varas.json
app/forms/config/: __init__.py  admin.py
app/forms/credentials/: __init__.py
app/handling/: __init__.py
app/logs/: setup.py
app/misc/: __init__.py  checkout.py
app/misc/MakeTemplate/: __init__.py  appends.py
app/models/: __init__.py  bots.py  export.xlsx  secondaries.py  srv.py  users.py
app/routes/: __init__.py
app/routes/auth/: __init__.py
app/routes/auth/templates/: login.html
app/routes/bot/: __init__.py  queue_bot.py
app/routes/bot/templates/: botboard.html  botform.html
app/routes/config/: __init__.py
app/routes/config/admin/: __init__.py
app/routes/config/superSu/: __init__.py  config.py  import_users.py
app/routes/config/user/: __init__.py  config.py
app/routes/credentials/: __init__.py
app/routes/credentials/templates/: FormCred.html  (+1 more)
app/routes/dashboard/: __init__.py
app/routes/execution/: __init__.py
app/routes/handler/: __init__.py
app/routes/logs/: __init__.py
app/templates/: index.html
app/templates/include/: footer.html  loading.html  message.html  navbar.html  sidebar.html
cloudflare/: __init__.py
configs/: __init__.py
static/: BarChart.js  PieChart.js
static/assets/demo/: chart-pie-demo.js
static/css/: sb-admin-2.min.css  styles.css
static/js/: DataTables.js  PreventForm.js  Show_Licenses.js  UsrForm.js  datatables-simple-demo.js  scripts.js  socket.js
static/js/charts/: BarChart.js  ChartArea.js
(+12 files in other folders)
